--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "homepage": "https://github.com/apaleslimghost/rosemary",
   "dependencies": {
-    "parse-duration": "^0.1.1",
-    "toposort": "^0.2.10"
+    "humanize-duration": "^3.31.0",
+    "parse-duration": "^0.1.1"
   },
   "volta": {
     "node": "20.10.0"
